# databricks-asset-bundle-projects

SQL-Alert-DAB/sql_alert_dab/: README.md  databricks.yml
SQL-Alert-DAB/sql_alert_dab/resources/: jobs.yml  variables.yaml
citibike-project/: .gitignore  README.md  databricks.yml  pyproject.toml  setup.py
citibike-project/citibike_etl/notebooks/01_bronze/: 01_bronze_citibike.ipynb
citibike-project/citibike_etl/notebooks/02_silver/: 02_silver_citibike.ipynb
citibike-project/citibike_etl/notebooks/03_gold/: 03_gold_citibike_daily_ride_summary.ipynb  03_gold_citibike_daily_station_performance.ipynb
citibike-project/citibike_etl/scripts/01_bronze/: 01_bronze_citibike.py
citibike-project/citibike_etl/scripts/02_silver/: 02_silver_citibike.py
citibike-project/citibike_etl/scripts/03_gold/: 03_gold_citibike_daily_ride_summary.py  03_gold_citibike_daily_station_performance.py
citibike-project/other/: configuring_spark_local_development.md  notes.md  workspace_creation.py
citibike-project/resources/: citibike_etl_pipeline_nb.job.yml  citibike_etl_pipeline_py.job.yml
citibike-project/src/citibike_project/: main.py
citibike-project/src/citibike_project/citibike/: citibike_utils.py
citibike-project/src/citibike_project/utils/: datetime_utils.py  get_spark_session.py
citibike-project/tests/: conftest.py  test_citibike_utils.py  test_datetime_utls.py
citibike_etl/alerts/: citibike_total_trip_alert.sql
resources/: citibike_sql_alerts.yml
sql_alert_dab/: pyproject.toml
sql_alert_dab/resources/: alerts.yaml
(+1 files in other folders)
